--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
-    "shim-jquery": "cd examples/shim-jquery && node build.js && open index.html"
+    "shim-jquery": "cd examples/shim-jquery && npm install && node build.js && open index.html",
+    "shim-underscore": "cd examples/shim-underscore && npm install && node build.js && open index.html"
   },
   "repository": {
     "type": "git",
