--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "browserify-shim",
   "version": "0.2.0",
-  "description": "Shims non commonJS modules so they can be browserified.",
+  "description": "Shims any module so it can be browserified even if it isn't commonJS compatible.",
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
