--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "tap": "~0.3.3",
-    "browserify": "~1.16.6",
     "request": "~2.12.0",
-    "jsdom": "~0.3.2"
+    "jsdom": "~0.3.2",
+    "browserify": "~2.3.1"
+  },
+  "dependencies": {
+    "through": "~2.2.0"
   }
 }
