--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "browserify-shim",
-  "version": "0.6.0",
-  "description": "Shims any module so it can be browserified even if it isn't commonJS compatible.",
+  "version": "1.0.0",
+  "description": "Shims commonJS incompatible modules so they can be browserified.",
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
