--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
-    "shim-jquery": "cd examples/shim-jquery && npm install && node build.js && open index.html",
-    "shim-underscore": "cd examples/shim-underscore && npm install && node build.js && open index.html"
+    "shim-jquery": "cd examples/shim-jquery && npm install && node build.js && opener index.html",
+    "shim-underscore": "cd examples/shim-underscore && npm install && node build.js && opener index.html"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,8 @@
     "tap": "~0.3.3",
     "request": "~2.12.0",
     "jsdom": "~0.5.0",
-    "browserify": "~2.4.0"
+    "browserify": "~2.4.0",
+    "opener": "~1.3"
   },
   "dependencies": {
     "through": "~2.2.0"
