--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "browserify-shim",
   "version": "2.0.1",
-  "description": "Shims CommonJS-incompatible modules so they can be browserified.",
+  "description": "Makes CommonJS-incompatible modules browserifyable.",
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
