--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "browserify": "~1.16.6",
     "request": "~2.12.0",
     "jsdom": "~0.3.2"
+  },
+  "peerDependencies": {
+      "browserify": ">= 1.0 < 2"
   }
 }
