--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "devDependencies": {
     "tap": "~0.3.3",
     "request": "~2.12.0",
-    "jsdom": "~0.5.0",
-    "browserify": "~2.4.0"
+    "jsdom": "~0.5.0"
   },
   "dependencies": {
     "through": "~2.2.0"
