--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "devDependencies": {
     "tap": "~0.3.3",
     "request": "~2.12.0",
-    "jsdom": "~0.5.0",
-    "browserify": "~2.23.1"
+    "browserify": "~2.23.1",
+    "jsdom": "~0.7.0"
   },
   "dependencies": {
     "through": "~2.2.0"
