upgrading through which fixes all problems with newer browserify, so updating it and the peer dep as well

--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   "devDependencies": {
     "tap": "~0.3.3",
     "request": "~2.12.0",
-    "browserify": "~2.23.1",
-    "jsdom": "~0.7.0"
+    "jsdom": "~0.7.0",
+    "browserify": "~2.25.0"
   },
   "dependencies": {
-    "through": "~2.2.0"
+    "through": "~2.3.4"
   },
   "peerDependencies": {
-    "browserify": ">= 2.3.0 < 2.24"
+    "browserify": ">= 2.3.0 < 3"
   }
 }
