--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Makes CommonJS-incompatible modules browserifyable.",
   "main": "index.js",
   "scripts": {
-    "test": "tap test/*.js",
+    "test": "tap test/*.js && tap test/shim/*.js",
     "shim-jquery": "npm install opener && cd ./examples/shim-jquery && mkdir ./js/build; npm install && node build.js && opener index.html",
     "shim-underscore": "npm install opener && cd ./examples/shim-underscore && mkdir ./js/build; npm install && node build.js && opener index.html"
   },
@@ -28,7 +28,8 @@
     "tap": "~0.3.3",
     "request": "~2.12.0",
     "jsdom": "~0.7.0",
-    "browserify": "~2.35.4"
+    "browserify": "~2.35.4",
+    "proxyquire": "~0.5.1"
   },
   "dependencies": {
     "through": "~2.3.4",
