--- a/examples/shim-jquery/package.json
+++ b/examples/shim-jquery/package.json
@@ -21,8 +21,10 @@
   "author": "Thorsten Lorenz",
   "license": "BSD",
   "dependencies": {
-    "request": "~2.12.0",
+    "request": "~2.12.0"
+  },
+  "devDependencies": {
     "browserify": "~2.36.1",
-    "browserify-shim": "git://github.com/thlorenz/browserify-shim#v3"
+    "browserify-shim": "~3.0.0"
   }
 }
