--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "tap": "~0.3.3",
     "request": "~2.12.0",
     "jsdom": "~0.7.0",
-    "browserify": "~2.35.4",
-    "proxyquire": "~0.5.1"
+    "proxyquire": "~0.5.1",
+    "browserify": "~3.0.0"
   },
   "dependencies": {
     "through": "~2.3.4",
     "find-parent-dir": "~0.1.0"
   },
   "peerDependencies": {
-    "browserify": ">= 2.3.0 < 3"
+    "browserify": ">= 2.3.0 < 4"
   }
 }
