--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "dependencies": {
     "through": "~2.3.4",
-    "find-parent-dir": "~0.1.0"
+    "find-parent-dir": "~0.1.0",
+    "resolve": "~0.6.1"
   },
   "peerDependencies": {
     "browserify": ">= 2.3.0 < 4"
