--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "through": "~2.3.4",
     "find-parent-dir": "~0.1.0",
-    "resolve": "~0.6.1"
+    "resolve": "~0.6.1",
+    "exposify": "~0.1.2"
   },
   "peerDependencies": {
     "browserify": ">= 2.3.0 < 4"
