--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "request": "~2.12.0",
     "jsdom": "~0.7.0",
     "proxyquire": "~0.5.1",
-    "browserify": "~3.0.0"
+    "browserify": "~3.0.0",
+    "ncp": "~0.5.0",
+    "rimraf": "~2.2.6"
   },
   "dependencies": {
     "through": "~2.3.4",
