finding package.json with mothership
- this means the first package.json upwards in the tree with a browserify-shim config will be used to apply configs
- that way the @fixPackage feature kicks in for the very first resolved file already
- all tests (including bower related ones) are now passing

--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "through": "~2.3.4",
     "find-parent-dir": "~0.1.0",
     "resolve": "~0.6.1",
-    "exposify": "~0.1.2"
+    "exposify": "~0.1.2",
+    "readdirp": "~0.3.3",
+    "through2": "~0.4.1",
+    "mothership": "~0.1.0"
   },
   "peerDependencies": {
     "browserify": ">= 2.3.0 < 4"
