fixing invalid require statements
- after requiring our dependencies (which are valid) we shadow require
- this will cause if (typeof require!='undefined') to return false which
  is what we want
- fixes problems with libraries that contain requires that cannot be
  resolved
- problem similar to ember issue was reproduced and confirmed to be
  fixed

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "exposify": "~0.1.2",
     "readdirp": "~0.3.3",
     "through2": "~0.4.1",
-    "mothership": "~0.1.0"
+    "mothership": "~0.1.0",
+    "rename-function-calls": "~0.1.0"
   },
   "peerDependencies": {
     "browserify": ">= 2.3.0 < 4"
