--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test-b3": "npm rm browserify && npm install browserify@3 && npm run test-main",
     "test-b4": "npm rm browserify && npm install browserify@4 && npm run test-main",
     "test-b5": "npm rm browserify && npm install browserify@5 && npm run test-main",
-    "test": "npm run test-b2 && npm run test-b3 && npm run test-b4 && npm run test-b5",
+    "test-b6": "npm rm browserify && npm install browserify@6 && npm run test-main",
+    "test": "npm run test-b2 && npm run test-b3 && npm run test-b4 && npm run test-b5 && npm run test-b6",
     "shim-jquery": "npm install opener && cd ./examples/shim-jquery && npm install && node build.js && opener index.html",
     "shim-jquery-diag": "npm install opener && cd ./examples/shim-jquery && npm install && node build-diag.js && opener index.html",
     "expose-jquery": "npm install opener && cd ./examples/expose-jquery && npm install && node build.js && opener index.html",
@@ -33,7 +34,7 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "browserify": "~5.10.1",
+    "browserify": "~6.0.2",
     "jsdom": "~0.7.0",
     "ncp": "~0.5.0",
     "proxyquire": "~0.5.1",
@@ -49,6 +50,6 @@
     "through": "~2.3.4"
   },
   "peerDependencies": {
-    "browserify": ">= 2.3.0 < 6"
+    "browserify": ">= 2.3.0 < 7"
   }
 }
