--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test-b4": "npm rm browserify && npm install browserify@4 && npm run test-main",
     "test-b5": "npm rm browserify && npm install browserify@5 && npm run test-main",
     "test-b6": "npm rm browserify && npm install browserify@6 && npm run test-main",
-    "test": "npm run test-b2 && npm run test-b3 && npm run test-b4 && npm run test-b5 && npm run test-b6",
+    "test-b7": "npm rm browserify && npm install browserify@7 && npm run test-main",
+    "test": "npm run test-b2 && npm run test-b3 && npm run test-b4 && npm run test-b5 && npm run test-b6 && npm run test-b7",
     "shim-jquery": "npm install opener && cd ./examples/shim-jquery && npm install && node build.js && opener index.html",
     "shim-jquery-diag": "npm install opener && cd ./examples/shim-jquery && npm install && node build-diag.js && opener index.html",
     "expose-jquery": "npm install opener && cd ./examples/expose-jquery && npm install && node build.js && opener index.html",
@@ -34,7 +35,7 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "browserify": "~6.0.2",
+    "browserify": "~7.0.0",
     "jsdom": "~0.7.0",
     "ncp": "~0.5.0",
     "proxyquire": "~0.5.1",
@@ -50,6 +51,6 @@
     "through": "~2.3.4"
   },
   "peerDependencies": {
-    "browserify": ">= 2.3.0 < 7"
+    "browserify": ">= 2.3.0 < 8"
   }
 }
