--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test-b6": "npm rm browserify && npm install browserify@6 && npm run test-main",
     "test-b7": "npm rm browserify && npm install browserify@7 && npm run test-main",
     "test-b8": "npm rm browserify && npm install browserify@8 && npm run test-main",
-    "test": "npm run test-b2 && npm run test-b3 && npm run test-b4 && npm run test-b5 && npm run test-b6 && npm run test-b7 && npm run test-b8",
+    "test-b9": "npm rm browserify && npm install browserify@9 && npm run test-main",
+    "test": "npm run test-b2 && npm run test-b3 && npm run test-b4 && npm run test-b5 && npm run test-b6 && npm run test-b7 && npm run test-b8 && npm run test-b9",
     "shim-jquery": "npm install opener && cd ./examples/shim-jquery && npm install && node build.js && opener index.html",
     "shim-jquery-diag": "npm install opener && cd ./examples/shim-jquery && npm install && node build-diag.js && opener index.html",
     "expose-jquery": "npm install opener && cd ./examples/expose-jquery && npm install && node build.js && opener index.html",
@@ -52,6 +53,6 @@
     "through": "~2.3.4"
   },
   "peerDependencies": {
-    "browserify": ">= 2.3.0 < 9"
+    "browserify": ">= 2.3.0 < 10"
   }
 }
