Add browserify@10 support
Ref #162

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test-b7": "npm rm browserify && npm install browserify@7 && npm run test-main",
     "test-b8": "npm rm browserify && npm install browserify@8 && npm run test-main",
     "test-b9": "npm rm browserify && npm install browserify@9 && npm run test-main",
-    "test": "npm run test-b2 && npm run test-b3 && npm run test-b4 && npm run test-b5 && npm run test-b6 && npm run test-b7 && npm run test-b8 && npm run test-b9",
+    "test-b10": "npm rm browserify && npm install browserify@10 && npm run test-main",
+    "test": "npm run test-b2 && npm run test-b3 && npm run test-b4 && npm run test-b5 && npm run test-b6 && npm run test-b7 && npm run test-b8 && npm run test-b9 && npm run test-b10",
     "shim-jquery": "npm install opener && cd ./examples/shim-jquery && npm install && node build.js && opener index.html",
     "shim-jquery-diag": "npm install opener && cd ./examples/shim-jquery && npm install && node build-diag.js && opener index.html",
     "expose-jquery": "npm install opener && cd ./examples/expose-jquery && npm install && node build.js && opener index.html",
@@ -39,7 +40,7 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "browserify": "~8.0.0",
+    "browserify": "^10.0.0",
     "jsdom": "~0.7.0",
     "ncp": "~0.5.0",
     "proxyquire": "~0.5.1",
@@ -55,6 +56,6 @@
     "through": "~2.3.4"
   },
   "peerDependencies": {
-    "browserify": ">= 2.3.0 < 10"
+    "browserify": ">= 2.3.0 < 11"
   }
 }
