Make tests iojs only
Previously were 0.10 only. This is due to jsdom issues. It is only
supporting iojs as of v4 and the old version we were using didn't work
on 0.12 or iojs.

Closes #163

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "exposify": "~0.2.0",
+    "jsdom": "^5.4.2",
     "mothership": "~0.2.0",
     "rename-function-calls": "~0.1.0",
     "resolve": "~0.6.1",
