--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "proxyquire": "~0.5.1",
     "request": "~2.12.0",
     "rimraf": "~2.2.6",
-    "tap": "~0.3.3",
+    "tap": "^1.1.0",
     "test-peer-range": "^1.0.1"
   },
   "dependencies": {
