--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "rename-function-calls": "~0.1.0",
     "resolve": "~0.6.1",
     "through": "~2.3.4",
-    "xtend": "^4.0.1"
+    "xtend": "~4.0.1"
   },
   "peerDependencies": {
     "browserify": ">= 2.3.0 < 13"
