--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "request": "~2.12.0",
     "rimraf": "~2.2.6",
     "tap": "^1.1.0",
-    "test-peer-range": "^1.0.1"
+    "test-peer-range": "1.0.1"
   },
   "dependencies": {
     "exposify": "~0.5.0",
