--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "through": "~2.3.4"
   },
   "peerDependencies": {
-    "browserify": ">= 2.3, <= 15"
+    "browserify": ">= 2.3 <= 15"
   }
 }
